examples/test/testpolicy129.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy129
  namespace: namespace425
spec:
  podSelector:
    matchLabels:
      key21: value11
      key36: value45
      key17: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value0
      podSelector:
        matchLabels:
          key32: value46
          key26: value45
          key22: value15
